--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ env:
   PROJECT_ID: ${{secrets.GKE_PROJECT}}
   GKE_CLUSTER: cc-cluster
   GKE_ZONE: asia-south1-a
-  DEPLOYMENT_NAME: deployment-nodeapp
+  DEPLOYMENT_NAME: deployment-nodeapp-development
   IMAGE: github-actions-gke-image
   TAG: 1.0.0
 
