--- a/deployment.yml
+++ b/deployment.yml
@@ -18,3 +18,9 @@ spec:
       - name: nodeserver
         image: gcr.io/PROJECT_ID/IMAGE:TAG
         imagePullPolicy: Always
+        env:
+          - name: OPENAI_API_KEY
+            valueFrom:
+              secretKeyRef:
+                name: mongo-uri
+                key: OPENAI_API_KEY
