--- a/deployment.yml
+++ b/deployment.yml
@@ -22,5 +22,5 @@ spec:
           - name: OPENAI_API_KEY
             valueFrom:
               secretKeyRef:
-                name: mongo-uri
+                name: api-uri
                 key: OPENAI_API_KEY
