--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,6 @@ jobs:
           gcloud components install gke-gcloud-auth-plugin
           ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$TAG
           ./kustomize build . | kubectl apply -f -
-          kubectl create secret generic mongo-uri --from-literal=OPENAI_API_KEY="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"
+          kubectl create secret generic api-uri --from-literal=OPENAI_API_KEY="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"
           kubectl rollout status deployment/$DEPLOYMENT_NAME
           kubectl get services -o wide
