--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -2,5 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - openai-dev-secret.yml
+  - mongo-dev-secret.yml
   - service.yml
   - deployment.yml
